--- a/styles/component/select.scss
+++ b/styles/component/select.scss
@@ -1,10 +1,10 @@
-@use "sass:map";
+
 @use "../common" as *;
 //选择菜单
 
 .b3-select {
   @include component();
-  background-color: map.get($bg, "component", 1);
+  background-color: get($bg, "component", 1);
   &:hover,
   &:focus {
     box-shadow: unset;
