--- a/styles/panel/emojis.scss
+++ b/styles/panel/emojis.scss
@@ -1,11 +1,11 @@
-@use "sass:map";
+
 @use "../common" as *;
 
-$type-radius: map.get($radius, "base");
+$type-radius: get($radius, "base");
 //表情面板
 .emojis {
   padding: 2px;
-  background-color: map.get($bg, "pop", 1);
+  background-color: get($bg, "pop", 1);
 
   // 顶部工具栏
   > .fn__flex:first-child {
@@ -18,7 +18,7 @@ $type-radius: map.get($radius, "base");
     }
 
     .block__icon {
-      @include icon-btn("pop", map.get($component-size, "base"), 12px);
+      @include icon-btn("pop", get($component-size, "base"), 12px);
     }
   }
 
@@ -40,7 +40,7 @@ $type-radius: map.get($radius, "base");
     margin: 0 4px 4px 0;
 
     &--current {
-      background-color: map.get($bg, "pop", 2);
+      background-color: get($bg, "pop", 2);
     }
   }
 
