--- a/styles/protyle/block/iframe.scss
+++ b/styles/protyle/block/iframe.scss
@@ -1,4 +1,4 @@
-@use "sass:map";
+
 @use "../../common" as *;
 
 .protyle-wysiwyg [data-node-id].iframe {
@@ -11,7 +11,7 @@
   .protyle-action__drag {
     &,
     &::after {
-      background-color: map.get($border, 2) !important;
+      background-color: get($border, 2) !important;
       box-shadow: unset !important;
     }
 
