--- a/styles/component/text-field.scss
+++ b/styles/component/text-field.scss
@@ -1,13 +1,13 @@
-@use "sass:map";
+
 @use "../common" as *;
 
 //输入框
 .b3-text-field {
   @include reset-style();
   @include component();
-  border: 1px solid map.get($border, 4) !important;
-  border-bottom: 1px solid map.get($border, 2) !important;
-  background-color: map.get($bg, "component", 1);
+  border: 1px solid get($border, 4) !important;
+  border-bottom: 1px solid get($border, 2) !important;
+  background-color: get($bg, "component", 1);
   flex-shrink: 0;
 
   &:hover {
@@ -15,7 +15,7 @@
   }
 
   &:focus {
-    box-shadow: 0 -3px 0 -2px inset map.get($color, "brand", "base");
-    border-bottom: 1px solid map.get($color, "brand", "base");
+    box-shadow: 0 -3px 0 -2px inset get($color, "brand", "base");
+    border-bottom: 1px solid get($color, "brand", "base");
   }
 }
