--- a/styles/layout/top-bar.scss
+++ b/styles/layout/top-bar.scss
@@ -1,4 +1,4 @@
-@use "sass:map";
+
 @use "sass:list";
 
 @use "../common" as *;
@@ -56,7 +56,7 @@ $map: (
     @include center();
     @include component-base();
     content: $content;
-    color: map.get($text, "secondary");
+    color: get($text, "secondary");
     z-index: 0;
     width: 100%;
   }
@@ -77,7 +77,7 @@ $map: (
 
   #toolbarVIP {
     -webkit-app-region: drag;
-    $icon-w: 13px; //map.get($icon, "default");
+    $icon-w: 13px; //get($icon, "default");
     $width: dock.$item-w + $interval * 2;
 
     &:empty {
@@ -106,8 +106,8 @@ $map: (
           width: auto;
           height: $item-h;
           padding: 0 $padding;
-          border-radius: map.get($radius, "max");
-          background-color: map.get($bg, "base", 2);
+          border-radius: get($radius, "max");
+          background-color: get($bg, "base", 2);
           margin-right: 8px;
           display: inline-flex;
 
@@ -123,7 +123,7 @@ $map: (
             width: auto;
             font-size: 11px;
             z-index: 0;
-            color: map.get($text, "secondary");
+            color: get($text, "secondary");
           }
 
           $types: "捐赠者", "支持者", "赞助者";
@@ -181,7 +181,7 @@ $map: (
     &#closeWindow {
       @include win-control(10px);
       &:hover {
-        background-color: map.get($color, "error", "base");
+        background-color: get($color, "error", "base");
       }
     }
   }
