--- a/styles/panel/graph.scss
+++ b/styles/panel/graph.scss
@@ -1,12 +1,12 @@
-@use "sass:map";
+
 @use "../common" as *;
 
 .graph {
   &__panel {
     top: 50px;
     bottom: 10px;
-    box-shadow: map.get($shadow, 2);
-    border-radius: map.get($radius, "large");
+    box-shadow: get($shadow, 2);
+    border-radius: get($radius, "large");
     padding: 8px 16px 16px;
     width: max(20%, 240px);
     right: min(calc(-20% - 10px), -250px);
@@ -36,14 +36,14 @@
   }
 
   &__svg {
-    background-color: map.get($bg, "page", 1);
+    background-color: get($bg, "page", 1);
   }
 
   &__loading {
-    background-color: map.get($bg, "component", 1);
-    border-radius: map.get($radius, "base");
+    background-color: get($bg, "component", 1);
+    border-radius: get($radius, "base");
     > div {
-      border-radius: map.get($radius, "base");
+      border-radius: get($radius, "base");
     }
   }
 }
