--- a/styles/panel/pop-over.scss
+++ b/styles/panel/pop-over.scss
@@ -1,16 +1,16 @@
-@use "sass:map";
+
 @use "../common" as *;
 @use "block-icons";
 
-$pop-radius: map.get($radius, "exlarge");
-$pop-bg: map.get($bg, "page", 1);
+$pop-radius: get($radius, "exlarge");
+$pop-bg: get($bg, "page", 1);
 $content-min-height: 74px;
 $bread-crumb-height: 32px;
 
 //块引用窗口
 .block {
   &__popover {
-    box-shadow: map.get($shadow, 3);
+    box-shadow: get($shadow, 3);
     border-radius: $pop-radius;
 
     opacity: 0;
@@ -19,8 +19,8 @@ $bread-crumb-height: 32px;
       opacity: 1;
       margin-top: 0px;
       transition: opacity,
-        margin-top map.get($transition-duration, "base")
-          map.get($transition-function, "ease-in-out");
+        margin-top get($transition-duration, "base")
+          get($transition-function, "ease-in-out");
     }
   }
 
@@ -31,8 +31,8 @@ $bread-crumb-height: 32px;
       &[data-type="pin"] {
         svg {
           transform: rotate(45deg);
-          transition: transform map.get($transition-duration, "base")
-            map.get($transition-function, "ease-in-out");
+          transition: transform get($transition-duration, "base")
+            get($transition-function, "ease-in-out");
         }
         &[aria-label="取消钉住"] {
           svg {
@@ -61,9 +61,9 @@ $bread-crumb-height: 32px;
 
         &__item--active {
           .protyle-breadcrumb__text:not(:empty) {
-            color: map.get($text, "placeholder");
+            color: get($text, "placeholder");
             &:hover {
-              color: map.get($text, "primary");
+              color: get($text, "primary");
             }
           }
         }
