--- a/styles/protyle/block/mark.scss
+++ b/styles/protyle/block/mark.scss
@@ -1,24 +1,24 @@
-@use "sass:map";
+
 @use "../../common" as *;
 
-$search-bg: map.get($color, "yellow", 2);
-$mark: rgba(var(--brand-base), 0.3);
+$search-bg: get($color, "yellow", 2);
+$mark: get($bg, "focus", 2);
 
 :root {
   // 编辑器搜索颜色
   --b3-protyle-search-background: #{$search-bg};
-  --b3-protyle-inline-mark-color: #{map.get($text, "primary")};
+  --b3-protyle-inline-mark-color: #{get($text, "primary")};
   --b3-protyle-inline-mark-background: #{$search-bg};
 }
 
 .b3-typography,
 .protyle-wysiwyg {
   mark {
-    // background-color: transparent;
+    background-color: transparent;
     background-image: linear-gradient(
       transparent,
       transparent 50%,
-      $mark 90%,
+      $mark 70%,
       $mark 100%
     );
   }
