--- a/styles/protyle/block/quote.scss
+++ b/styles/protyle/block/quote.scss
@@ -1,9 +1,9 @@
-@use "sass:map";
+
 @use "../../common" as *;
 @use "heading";
 @use "list";
 
-$bq-color: map.get($text, "secondary");
+$bq-color: get($text, "secondary");
 
 $side-left: $fn-space;
 $side-w: 3px;
@@ -26,8 +26,8 @@ $pad-l: 12px;
     bottom: $side-left;
     left: $side-left;
     z-index: 0;
-    border-radius: map.get($radius, "medium");
-    background-color: map.get($text, "primary");
+    border-radius: get($radius, "medium");
+    background-color: get($text, "primary");
   }
 }
 
