--- a/styles/protyle/block/ref.scss
+++ b/styles/protyle/block/ref.scss
@@ -1,15 +1,15 @@
-@use "sass:map";
+
 @use "../../common" as *;
 
 :root {
-  --b3-protyle-inline-blockref-color: #{map.get($color, "brand", "base")};
+  --b3-protyle-inline-blockref-color: #{get($text, "brand")};
 }
 
 .protyle-wysiwyg [data-node-id] {
   span[data-type="block-ref"],
   span[data-type="file-annotation-ref"] {
     opacity: 1;
-    border-radius: map.get($radius, "small") !important;
+    border-radius: get($radius, "small") !important;
     &:hover {
       background-color: var(--b3-theme-primary-lightest);
     }
