--- a/themes/tdesign/dark.scss
+++ b/themes/tdesign/dark.scss
@@ -1,109 +1,15 @@
+@use "./palette" as *;
+@use "./global" as *;
+
 :root {
   --mode-btn: "明亮";
   --mode-after: "明亮模式";
 
-  --blue-1: 27, 47, 81;
-  --blue-2: 23, 52, 99;
-  --blue-3: 20, 57, 117;
-  --blue-4: 16, 61, 136;
-  --blue-5: 13, 66, 154;
-  --blue-6: 5, 75, 190;
-  --blue-7: 38, 103, 212;
-  --blue-8: 69, 130, 230;
-  --blue-9: 105, 158, 245;
-  --blue-10: 150, 187, 248;
-
-  --orange-1: 79, 42, 29;
-  --orange-2: 88, 47, 33;
-  --orange-3: 115, 60, 35;
-  --orange-4: 167, 93, 43;
-  --orange-5: 207, 110, 45;
-  --orange-6: 220, 118, 51;
-  --orange-7: 232, 148, 92;
-  --orange-8: 236, 191, 145;
-  --orange-9: 238, 215, 191;
-  --orange-10: 243, 233, 220;
-
-  --red-1: 71, 35, 36;
-  --red-2: 94, 42, 45;
-  --red-3: 112, 52, 57;
-  --red-4: 131, 56, 62;
-  --red-5: 160, 63, 70;
-  --red-6: 198, 71, 81;
-  --red-7: 222, 102, 112;
-  --red-8: 236, 136, 142;
-  --red-9: 237, 177, 182;
-  --red-10: 238, 206, 208;
-
-  --green-1: 25, 58, 42;
-  --green-2: 26, 66, 48;
-  --green-3: 23, 83, 61;
-  --green-4: 13, 122, 85;
-  --green-5: 5, 148, 101;
-  --green-6: 67, 175, 138;
-  --green-7: 70, 191, 150;
-  --green-8: 128, 210, 182;
-  --green-9: 180, 225, 211;
-  --green-10: 222, 237, 232;
-
-  --cyan-1: 5, 67, 125;
-  --cyan-2: 6, 87, 158;
-  --cyan-3: 8, 108, 192;
-  --cyan-4: 11, 131, 223;
-  --cyan-5: 15, 152, 250;
-  --cyan-6: 60, 177, 251;
-  --cyan-7: 103, 201, 252;
-  --cyan-8: 143, 221, 255;
-  --cyan-9: 189, 239, 255;
-  --cyan-10: 224, 249, 255;
-
-  --purple-1: 69, 25, 129;
-  --purple-2: 90, 45, 150;
-  --purple-3: 113, 65, 172;
-  --purple-4: 135, 84, 194;
-  --purple-5: 158, 108, 216;
-  --purple-6: 179, 130, 240;
-  --purple-7: 203, 150, 255;
-  --purple-8: 221, 181, 255;
-  --purple-9: 234, 207, 255;
-  --purple-10: 247, 235, 255;
-
-  --yellow-1: 94, 59, 4;
-  --yellow-2: 117, 78, 5;
-  --yellow-3: 140, 97, 6;
-  --yellow-4: 163, 116, 7;
-  --yellow-5: 186, 137, 7;
-  --yellow-6: 210, 158, 8;
-  --yellow-7: 235, 179, 14;
-  --yellow-8: 251, 204, 48;
-  --yellow-9: 255, 230, 130;
-  --yellow-10: 255, 249, 194;
-
-  --pink-1: 123, 5, 84;
-  --pink-2: 155, 6, 109;
-  --pink-3: 188, 8, 138;
-  --pink-4: 212, 53, 160;
-  --pink-5: 237, 83, 183;
-  --pink-6: 255, 112, 207;
-  --pink-7: 255, 153, 228;
-  --pink-8: 255, 189, 244;
-  --pink-9: 255, 219, 253;
-  --pink-10: 255, 242, 255;
-
-  --gray-1: 24, 24, 24;
-  --gray-2: 36, 36, 36;
-  --gray-3: 44, 44, 44;
-  --gray-4: 56, 56, 56;
-  --gray-5: 75, 75, 75;
-  --gray-6: 94, 94, 94;
-  --gray-7: 120, 120, 120;
-  --gray-8: 139, 139, 139;
-  --gray-9: 166, 166, 166;
-  --gray-10: 197, 197, 197;
-  --gray-11: 220, 220, 220;
-  --gray-12: 231, 231, 231;
-  --gray-13: 237, 237, 237;
-  --gray-14: 243, 243, 243;
+  @each $type, $maps in $dark-colors {
+    @each $i, $color in $maps {
+      #{--#{$type}-#{$i}}: #{hex2rgb($color)};
+    }
+  }
 
   @for $i from 1 through 10 {
     #{--brand-#{$i}}: var(--blue-#{$i});
