--- a/themes/tdesign/light.scss
+++ b/themes/tdesign/light.scss
@@ -1,109 +1,15 @@
+@use "./palette" as *;
+@use "./global" as *;
+
 :root {
   --mode-btn: "暗黑";
   --mode-after: "暗黑模式";
 
-  --blue-1: 236, 242, 254;
-  --blue-2: 212, 227, 252;
-  --blue-3: 187, 211, 251;
-  --blue-4: 150, 187, 248;
-  --blue-5: 105, 158, 245;
-  --blue-6: 71, 135, 240;
-  --blue-7: 38, 111, 232;
-  --blue-8: 0, 82, 217;
-  --blue-9: 0, 52, 181;
-  --blue-10: 0, 31, 151;
-
-  --orange-1: 254, 243, 230;
-  --orange-2: 249, 224, 199;
-  --orange-3: 247, 199, 151;
-  --orange-4: 242, 153, 95;
-  --orange-5: 237, 123, 47;
-  --orange-6: 211, 90, 33;
-  --orange-7: 186, 67, 27;
-  --orange-8: 158, 54, 16;
-  --orange-9: 132, 43, 11;
-  --orange-10: 90, 25, 7;
-
-  --red-1: 253, 236, 238;
-  --red-2: 249, 215, 217;
-  --red-3: 248, 185, 190;
-  --red-4: 247, 141, 148;
-  --red-5: 243, 109, 120;
-  --red-6: 227, 77, 89;
-  --red-7: 201, 53, 63;
-  --red-8: 177, 31, 38;
-  --red-9: 149, 17, 20;
-  --red-10: 104, 5, 6;
-
-  --green-1: 232, 248, 242;
-  --green-2: 188, 235, 220;
-  --green-3: 133, 219, 190;
-  --green-4: 72, 199, 156;
-  --green-5: 0, 168, 112;
-  --green-6: 7, 141, 92;
-  --green-7: 6, 121, 69;
-  --green-8: 5, 99, 52;
-  --green-9: 4, 79, 42;
-  --green-10: 3, 48, 23;
-
-  --cyan-1: 214, 247, 255;
-  --cyan-2: 178, 236, 255;
-  --cyan-3: 133, 218, 255;
-  --cyan-4: 92, 197, 252;
-  --cyan-5: 49, 173, 251;
-  --cyan-6: 5, 148, 250;
-  --cyan-7: 0, 126, 223;
-  --cyan-8: 0, 104, 192;
-  --cyan-9: 0, 84, 158;
-  --cyan-10: 0, 65, 125;
-
-  --purple-1: 243, 224, 255;
-  --purple-2: 230, 196, 255;
-  --purple-3: 216, 171, 255;
-  --purple-4: 198, 140, 255;
-  --purple-5: 174, 120, 240;
-  --purple-6: 153, 99, 216;
-  --purple-7: 131, 78, 194;
-  --purple-8: 109, 59, 172;
-  --purple-9: 87, 39, 150;
-  --purple-10: 66, 19, 129;
-
-  --yellow-1: 255, 248, 184;
-  --yellow-2: 255, 228, 120;
-  --yellow-3: 251, 202, 37;
-  --yellow-4: 235, 177, 5;
-  --yellow-5: 210, 156, 0;
-  --yellow-6: 186, 135, 0;
-  --yellow-7: 163, 114, 0;
-  --yellow-8: 140, 95, 0;
-  --yellow-9: 117, 76, 0;
-  --yellow-10: 94, 58, 0;
-
-  --pink-1: 255, 233, 255;
-  --pink-2: 255, 209, 252;
-  --pink-3: 255, 178, 242;
-  --pink-4: 255, 143, 225;
-  --pink-5: 255, 102, 204;
-  --pink-6: 237, 73, 180;
-  --pink-7: 212, 44, 157;
-  --pink-8: 188, 0, 136;
-  --pink-9: 155, 0, 107;
-  --pink-10: 123, 0, 82;
-
-  --gray-1: 243, 243, 243;
-  --gray-2: 237, 237, 237;
-  --gray-3: 231, 231, 231;
-  --gray-4: 220, 220, 220;
-  --gray-5: 197, 197, 197;
-  --gray-6: 166, 166, 166;
-  --gray-7: 139, 139, 139;
-  --gray-8: 120, 120, 120;
-  --gray-9: 94, 94, 94;
-  --gray-10: 75, 75, 75;
-  --gray-11: 56, 56, 56;
-  --gray-12: 44, 44, 44;
-  --gray-13: 36, 36, 36;
-  --gray-14: 24, 24, 24;
+  @each $type, $maps in $light-colors {
+    @each $i, $color in $maps {
+      #{--#{$type}-#{$i}}: #{hex2rgb($color)};
+    }
+  }
 
   @for $i from 1 through 10 {
     #{--brand-#{$i}}: var(--blue-#{$i});
@@ -115,7 +21,8 @@
   --text-placeholder: rgba(0, 0, 0, 40%); // 色彩-文字-占位符/说明
   --text-disabled: rgba(0, 0, 0, 30%); // 色彩-文字-禁用
   --text-anti: #fff; // 色彩-文字-反色
-  --text-focus: rgb(var(--brand-8)); // 色彩-文字-品牌
+  --text-brand: rgb(var(--brand-8)); // 色彩-文字-品牌
+  --text-focus: rgb(var(--brand-8)); // 色彩-文字-选中
   --text-meta-focus: rgb(var(--brand-5)); // 色彩-文字-链接
 
   // 线条
@@ -175,7 +82,7 @@
   --base-3: var(--gray-4);
   --base-4: var(--gray-5);
 
-  --page-1: 255, 255, 255;
+  --page-1: #{hex2rgb(#fff)};
   --page-2: var(--gray-1);
   --page-3: var(--gray-2);
   --page-4: var(--gray-3);
@@ -185,7 +92,7 @@
   --component-3: var(--gray-4);
   --component-4: var(--gray-6);
 
-  --pop-1: 255, 255, 255;
+  --pop-1: #{hex2rgb(#fff)};
   --pop-2: var(--gray-1);
   --pop-3: var(--gray-2);
   --pop-4: var(--gray-3);
